흑백이미지 만들기 연습

--- a/html/mix-blend-mode.html
+++ b/html/mix-blend-mode.html
@@ -6,21 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
         <link rel="stylesheet" href="/css/main.css" />
-        <link rel="stylesheet" href="/css/hover.css" />
+        <link rel="stylesheet" href="/css/mix-blend-mode.css" />
     </head>
     <body>
         <header class="header">
             <div class="header-inner">
-                <h1>hover</h1>
+                <h1>흑백 이미지 만들기</h1>
             </div>
         </header>
-        <div class="post-section-title">hover and mix-blend-mode</div>
-        <ul>
-            <li>luminosity and normal</li>
-            <figure class="thumbnail-item-image">
-                <div class="img" style="background-image: url(/images/hover.jpg)"></div>
-            </figure>
-            <br />
-        </ul>
+        <div class="post-section-title">mix-blend-mode:luminosity</div>
+        <figure class="thumbnail-item-image">
+            <div class="img" style="background-image: url(/images/hover.jpg)"></div>
+        </figure>
+        <br />
     </body>
 </html>
