--- a/html/flexbox-container.html
+++ b/html/flexbox-container.html
@@ -5,13 +5,13 @@
         
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>FLEXBOX-container</title>
         <link rel="stylesheet" href="/css/main.css" />
         <link rel="stylesheet" href="/css/flexbox-container.css"></link>
     </head>
     <body>
-        <header class="header">
-            <div class="header-inner">
+        <header class="H-header">
+            <div class="H-header-inner">
                 <h1>FLEXBOX</h1>
             </div>
         </header>
@@ -51,26 +51,26 @@
         <ul>
             <li>nowrap</li>
             <div class="container nowrap">
-                <div class="item item1">동해 물과 백두산이</div>
-                <div class="item item2">마르고 닳도록</div>
-                <div class="item item3">하느님이 보우하사</div>
-                <div class="item item4">우리나라 만세</div>
+                <div class="item item1">In the near future,</div>
+                <div class="item item2">a weary Logan cares</div>
+                <div class="item item3">for an ailing Professor X</div>
+                <div class="item item4">in a hideout on the Mexican border.</div>
             </div>
             <br>
             <li>wrap</li>
             <div class="container wrap">
-                <div class="item item1">동해 물과 백두산이</div>
-                <div class="item item2">마르고 닳도록</div>
-                <div class="item item3">하느님이 보우하사</div>
-                <div class="item item4">우리나라 만세</div>
+                <div class="item item1">In the near future,</div>
+                <div class="item item2">a weary Logan cares</div>
+                <div class="item item3">for an ailing Professor X</div>
+                <div class="item item4">in a hideout on the Mexican border.</div>
             </div>
             <br>
             <li>wrap-reverse</li>
             <div class="container wrap-reverse">
-                <div class="item item1">동해 물과 백두산이</div>
-                <div class="item item2">마르고 닳도록</div>
-                <div class="item item3">하느님이 보우하사</div>
-                <div class="item item4">우리나라 만세</div>                
+                <div class="item item1">In the near future,</div>
+                <div class="item item2">a weary Logan cares</div>
+                <div class="item item3">for an ailing Professor X</div>
+                <div class="item item4">in a hideout on the Mexican border.</div>                
             </div>
             <br>
         </ul>
@@ -78,10 +78,10 @@
         <ul>
             <li>row-reverse wrap</li>
             <div class="container row-reverse-wrap">
-                <div class="item item1">동해 물과 백두산이</div>
-                <div class="item item2">마르고 닳도록</div>
-                <div class="item item3">하느님이 보우하사</div>
-                <div class="item item4">우리나라 만세</div>
+                <div class="item item1">In the near future,</div>
+                <div class="item item2">a weary Logan cares</div>
+                <div class="item item3">for an ailing Professor X</div>
+                <div class="item item4">in a hideout on the Mexican border.</div>
             </div>
         </ul>
         <h2>justify-content</h2>
