--- a/html/mix-blend-mode.html
+++ b/html/mix-blend-mode.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>흑백 이미지 만들기</title>
         <link rel="stylesheet" href="/css/main.css" />
         <link rel="stylesheet" href="/css/mix-blend-mode.css" />
     </head>
     <body>
-        <header class="header">
-            <div class="header-inner">
+        <header class="H-header">
+            <div class="H-header-inner">
                 <h1>흑백 이미지 만들기</h1>
             </div>
         </header>
