--- a/html/new-things-2022.html
+++ b/html/new-things-2022.html
@@ -85,8 +85,8 @@
     </div>
     <div class="post-section-title">@container</div>
     <h2>브라우저의 가로크기가 아닌 부모 요소의 크기에 맞춰 유동적으로 사이즈 조절 대응을 할 수 있는 기능: 20220615 테스트 불가</h2>
-    <header>
-        <nav>크기 조절이 되나요?</nav>
-    </header>
+    <div class="card-container">
+        <div class="title">크기 조절이 되나요?</div>
+    </div>
 </body>
 </html>
