--- a/html/dropdown.html
+++ b/html/dropdown.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>drop-down menu</title>
 <link rel="stylesheet" href="/css/main.css">
-<link rel="stylesheet" href="/css/dropsown.css" />
+<link rel="stylesheet" href="/css/dropdown.css" />
 </head>
 
 <body>
